changes to paper

--- a/paper/peekbank.bib
+++ b/paper/peekbank.bib
@@ -1,42 +1,179 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mike Frank at 2025-01-07 19:46:49 -0800 
+%% Created for Mike Frank at 2025-04-03 16:06:17 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@article{newman2017,
+	author = {Newman, Rochelle S and Morini, Giovanna},
+	date-added = {2025-04-03 16:06:11 -0700},
+	date-modified = {2025-04-03 16:06:17 -0700},
+	journal = {The Journal of the Acoustical Society of America},
+	number = {2},
+	pages = {EL164--EL169},
+	publisher = {Acoustical Society of America},
+	title = {Effect of the relationship between target and masker sex on infants' recognition of speech},
+	volume = {141},
+	year = {2017}}
+
+@article{potter2019,
+	author = {Potter, Christine E and Fourakis, Eva and Morin-Lessard, Elizabeth and Byers-Heinlein, Krista and Lew-Williams, Casey},
+	date-added = {2025-04-03 16:05:21 -0700},
+	date-modified = {2025-04-03 16:05:23 -0700},
+	journal = {Developmental Science},
+	number = {4},
+	pages = {e12794},
+	publisher = {Wiley Online Library},
+	title = {Bilingual toddlers' comprehension of mixed sentences is asymmetrical across their two languages},
+	volume = {22},
+	year = {2019}}
+
+@article{ferguson2014,
+	author = {Ferguson, Brock and Graf, Eileen and Waxman, Sandra R},
+	date-added = {2025-04-03 16:04:40 -0700},
+	date-modified = {2025-04-03 16:04:48 -0700},
+	journal = {Cognition},
+	number = {1},
+	pages = {139--146},
+	publisher = {Elsevier},
+	title = {Infants use known verbs to learn novel nouns: Evidence from 15-and 19-month-olds},
+	volume = {131},
+	year = {2014}}
+
+@article{bacon2022,
+	author = {Bacon, Desia and Saffran, Jenny},
+	date-added = {2025-04-03 16:02:19 -0700},
+	date-modified = {2025-04-03 16:02:21 -0700},
+	journal = {Infancy},
+	number = {2},
+	pages = {291--300},
+	publisher = {Wiley Online Library},
+	title = {Role of speaker gender in toddler lexical processing},
+	volume = {27},
+	year = {2022}}
+
+@article{ronfard2022,
+	author = {Ronfard, Samuel and Wei, Ran and Rowe, Meredith L},
+	date-added = {2025-04-03 15:59:31 -0700},
+	date-modified = {2025-04-03 16:00:32 -0700},
+	journal = {Journal of Child Language},
+	number = {2},
+	pages = {302--325},
+	publisher = {Cambridge University Press},
+	title = {Exploring the linguistic, cognitive, and social skills underlying lexical processing efficiency as measured by the looking-while-listening paradigm},
+	volume = {49},
+	year = {2022}}
+
+@article{perry2017,
+	author = {Perry, Lynn K and Saffran, Jenny R},
+	date-added = {2025-04-03 15:48:57 -0700},
+	date-modified = {2025-04-03 15:48:59 -0700},
+	journal = {Cognitive science},
+	number = {4},
+	pages = {1090--1105},
+	publisher = {Wiley Online Library},
+	title = {Is a pink cow still a cow? Individual differences in toddlers' vocabulary knowledge and lexical representations},
+	volume = {41},
+	year = {2017}}
+
+@article{pomper2016,
+	author = {Pomper, Ron and Saffran, Jenny R},
+	date-added = {2025-04-03 15:47:50 -0700},
+	date-modified = {2025-04-03 15:48:59 -0700},
+	journal = {PloS one},
+	number = {6},
+	pages = {e0158459},
+	publisher = {Public Library of Science San Francisco, CA USA},
+	title = {Roses are red, socks are blue: Switching dimensions disrupts young children's language comprehension},
+	volume = {11},
+	year = {2016}}
+
+@article{pomper2019,
+	author = {Pomper, Ron and Saffran, Jenny R},
+	date-added = {2025-04-03 15:47:36 -0700},
+	date-modified = {2025-04-03 15:47:40 -0700},
+	journal = {Child development},
+	number = {2},
+	pages = {e246--e262},
+	publisher = {Wiley Online Library},
+	title = {Familiar object salience affects novel word learning},
+	volume = {90},
+	year = {2019}}
+
+@book{baumgartner2014,
+	author = {Baumgartner, Heidi},
+	date-added = {2025-04-03 15:45:13 -0700},
+	date-modified = {2025-04-03 15:45:16 -0700},
+	publisher = {University of California, Davis},
+	title = {Understanding the role of non-contrastive variability in word learning and visual attention in infancy},
+	year = {2014}}
+
+@article{frank2016,
+	author = {Frank, Michael C and Sugarman, Elise and Horowitz, Alexandra C and Lewis, Molly L and Yurovsky, Daniel},
+	date-added = {2025-04-03 15:44:08 -0700},
+	date-modified = {2025-04-03 15:44:11 -0700},
+	journal = {Journal of Cognition and Development},
+	number = {1},
+	pages = {1--17},
+	publisher = {Taylor \& Francis},
+	title = {Using tablets to collect data from young children},
+	volume = {17},
+	year = {2016}}
+
+@article{sander-montant2023,
+	author = {Sander-Montant, Andrea and P{\'e}rez, Melanie L{\'o}pez and Byers-Heinlein, Krista},
+	date-added = {2025-04-03 15:43:31 -0700},
+	date-modified = {2025-04-03 15:43:35 -0700},
+	journal = {Cognition},
+	pages = {105525},
+	publisher = {Elsevier},
+	title = {The more they hear the more they learn? Using data from bilinguals to test models of early lexical development},
+	volume = {238},
+	year = {2023}}
+
+@article{weaver2024,
+	author = {Weaver, Haley and Zettersten, Martin and Saffran, Jenny R},
+	date-added = {2025-04-03 15:41:41 -0700},
+	date-modified = {2025-04-03 15:41:51 -0700},
+	journal = {Child Development},
+	number = {5},
+	pages = {e352--e372},
+	publisher = {Wiley Online Library},
+	title = {Becoming word meaning experts: Infants' processing of familiar words in the context of typical and atypical exemplars},
+	volume = {95},
+	year = {2024}}
+
+@misc{yurovsky2017,
+	author = {Yurovsky, Daniel and Wade, A and Kraus, AM and Gengoux, GW and Antonio, Y and Frank, MC},
+	date-added = {2025-04-03 15:35:48 -0700},
+	date-modified = {2025-04-03 15:35:53 -0700},
+	publisher = {unpublished manuscript},
+	title = {Developmental changes in the speed of social attention in early word learning},
+	year = {2017}}
+
 @article{bergelson2023,
-  title={Everyday language input and production in 1,001 children from six continents},
-  author={Bergelson, Elika and Soderstrom, Melanie and Schwarz, Iris-Corinna and Rowland, Caroline F and Ram{\'\i}rez-Esparza, Nair{\'a}n and Hamrick, Lisa R and Marklund, Ellen and Kalashnikova, Marina and Guez, Ava and Casillas, Marisa and others},
-  journal={Proceedings of the National Academy of Sciences of the United States of America},
-  volume={120},
-  number={52},
-  pages={e2300671120},
-  year={2023}
-}
+	author = {Bergelson, Elika and Soderstrom, Melanie and Schwarz, Iris-Corinna and Rowland, Caroline F and Ram{\'\i}rez-Esparza, Nair{\'a}n and Hamrick, Lisa R and Marklund, Ellen and Kalashnikova, Marina and Guez, Ava and Casillas, Marisa and others},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	number = {52},
+	pages = {e2300671120},
+	title = {Everyday language input and production in 1,001 children from six continents},
+	volume = {120},
+	year = {2023}}
 
-@article{manybabies2020,
-  title={Quantifying sources of variability in infancy research using the infant-directed-speech preference},
-  author={ManyBabies Consortium},
-  journal={Advances in Methods and Practices in Psychological Science},
-  volume={3},
-  number={1},
-  pages={24--52},
-  year={2020},
-  publisher={Sage Publications Sage CA: Los Angeles, CA}
-}
-
-@article{frank2017,
-  title={A collaborative approach to infant research: Promoting reproducibility, best practices, and theory-building},
-  author={Frank, Michael C and Bergelson, Elika and Bergmann, Christina and Cristia, Alejandrina and Floccia, Caroline and Gervain, Judit and Hamlin, J Kiley and Hannon, Erin E and Kline, Melissa and Levelt, Claartje and others},
-  journal={Infancy},
-  volume={22},
-  number={4},
-  pages={421--435},
-  year={2017},
-  publisher={Wiley Online Library}
-}
+@article{frank2017b,
+	author = {Frank, Michael C and Bergelson, Elika and Bergmann, Christina and Cristia, Alejandrina and Floccia, Caroline and Gervain, Judit and Hamlin, J Kiley and Hannon, Erin E and Kline, Melissa and Levelt, Claartje and others},
+	date-modified = {2025-04-03 15:34:56 -0700},
+	journal = {Infancy},
+	number = {4},
+	pages = {421--435},
+	publisher = {Wiley Online Library},
+	title = {A collaborative approach to infant research: Promoting reproducibility, best practices, and theory-building},
+	volume = {22},
+	year = {2017}}
 
 @article{vanderweele2023dimensional,
 	author = {VanderWeele, Tyler J and Batty, Charles JK},
