--- a/paper/peekbank.bib
+++ b/paper/peekbank.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mike Frank at 2025-04-03 16:06:17 -0700 
+%% Created for Mike Frank at 2025-04-04 14:26:54 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{meylan2025,
+	author = {Meylan, Stephan C and Levy, Roger P and Bergelson, Elika},
+	booktitle = {Developmental Psychology},
+	date-added = {2025-04-04 14:26:25 -0700},
+	date-modified = {2025-04-04 14:26:54 -0700},
+	title = {Children's Expressive and Receptive Knowledge of the English Regular Plural},
+	year = {in press}}
 
 @article{newman2017,
 	author = {Newman, Rochelle S and Morini, Giovanna},
