--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -157,7 +157,7 @@ Word recognition ability, as measured by LWL, is hypothesized to play a key role
 
 Word recognition speed has also been used as an index of individual differences in early childhood [@fernald2006;@marchman2008;@peter2019;@fernald2012;@newbury2016interrelationships] and beyond [@colby2023efficiency;@jeppsen2022development;@mcmurray2022slow]. Over and above measures of vocabulary size, word recognition speed at 18 months predicts children's standardized test scores years later [@marchman2008]. Further, faster processing at 18 months is predictive of whether "late talkers" catch up to their peers or could benefit from further intervention [@fernald2012].  Critically, these assessments use words that children at the target age are reported to understand and produce -- they are not indices of vocabulary size but rather of how quickly and accurately the child can recognize a familiar spoken word and use it to guide their visual attention to a referent. 
 
-Yet given the logistical hurdles involved in sampling from this population, individual experiments measuring processing speed with young children typically recruit relatively small samples in a restricted range of ages. These samples provide neither the breadth of ages nor the number of participants needed to estimate how word recognition changes developmentally and how it connects with other aspects of early language development (see [@colby2023efficiency; @mcmurray2022slow] for examples of these analyses in school-aged children). To overcome this limitation, we created Peekbank, an open database of LWL data from young children, stored in a harmonized format [@zettersten2023peekbank]. This dataset unifies and carefully curates a large amount of eye-tracking data from studies with infants and toddlers, representing cumulatively over 12 million individual samples of children's eye movements during real-time language processing. This resource allows us to gain an unprecedented view of the development of word recognition across a large sample of children. 
+Yet given the logistical hurdles involved in sampling from this population, individual experiments measuring processing speed with young children typically recruit relatively small samples in a restricted range of ages. These samples provide neither the breadth of ages nor the number of participants needed to estimate how word recognition changes developmentally and how it connects with other aspects of early language development (see [@colby2023efficiency; @mcmurray2022slow] for examples of these analyses in school-aged children). To overcome these limitations, we created Peekbank, an open database of LWL data from young children, stored in a harmonized format [@zettersten2023peekbank]. This dataset unifies and carefully curates a large amount of eye-tracking data from studies with infants and toddlers, representing cumulatively over 12 million individual samples of children's eye movements during real-time language processing. The Peekbank dataset allows us to gain an unprecedented view of the development of word recognition across a large sample of children. 
 
 We investigate two specific hypotheses here. First, one influential theory posits that language learning is a process of skill learning, in which the child is learning the skill of fluent conversation with other language users [@christiansen2016;@chater2018]. In this theory, the major information processing challenge of language learning is that incoming language is ephemeral and must be processed quickly before it is lost (the "now-or-never bottleneck"). On this kind of account, we should expect to see the signatures of expertise and skill learning in word recognition, which is one of the primary skills involved in processing incoming language in real time. Accuracy should change linearly with the logarithm of age, reflecting gradual asymptotic convergence to mature levels of accuracy. In addition, we might observe what is known as the "power law of practice," the regularity found in many cases of skill learning that the logarithm of reaction time decreases with the logarithm of experience [@snoddy1926;@kail1991;@anderson1982; cf. @heathcote2000]. In our case, we expect that chronological age is a proxy for experience and so the logarithm of reaction time should decrease linearly with the logarithm of age. Finally, trial-to-trial variability in both speed and accuracy should decrease with increasing expertise, as is found in studies of motor expertise [@todorov2002optimal]. 
 
@@ -349,9 +349,9 @@ rt_mods_lmer_summary <- map_df(rt_mods_lmer, ~broom.mixed::glance(.x)) |>
          r2 = map_dbl(rt_mods_lmer, ~performance::r2_nakagawa(.x)$R2_conditional))
 ```
 
-We began by examining developmental changes in children's word recognition. Figure \ref{fig:timecourse} depicts the average timecourse at different ages across all datasets. Intuitively, these timecourses show gradual increases in accuracy (higher overall proportion target looking) and speed (faster looking to the target after hearing a label) as age increases. To systematically characterize age gradients in speed and accuracy across children, we computed both RTs (reaction times) and accuracies (proportion looking at the target image) following standard practices in the literature [@fernald2008]. Because there is no consensus about the length of time windows for the computation of accuracy, we considered both a shorter window (from 200 -- 2000 ms after noun onset) and a longer window (from 200 -- 4000 ms). For each window, we averaged all fixations within the window to compute a continuous proportion of target looking between 0 (no fixation on the target during the window) and 1 (total fixation on the target during the window) on every trial. In this initial analysis, we treat observations of RT and target looking as direct measures of the constructs speed and accuracy (see SI: Test-Retest Reliability); in subsequent analyses we estimate latent variables representing these constructs.
+We began by examining developmental changes in children's word recognition. Figure \ref{fig:timecourse} depicts the average timecourse at different ages across all datasets (not controlling for any variation in items and procedures across age groups). Intuitively, these timecourses show gradual increases in accuracy (higher overall proportion target looking) and speed (faster looking to the target after hearing a label) as age increases. To characterize age gradients in speed and accuracy across children, we computed both RTs (reaction times) and accuracies (proportion looking at the target image) following standard practices in the literature [@fernald2008]. Because there is no consensus about the length of time windows for the computation of accuracy, we considered both a shorter window (from 200 -- 2000 ms after noun onset) and a longer window (from 200 -- 4000 ms). For each window, we averaged all fixations within the window to compute a continuous proportion of target looking between 0 (no fixation on the target during the window) and 1 (total fixation on the target during the window) on every trial. In this initial analysis, we treat observations of RT and target looking as direct measures of the constructs speed and accuracy (see SI: Test-Retest Reliability); in subsequent analyses we estimate latent variables representing these constructs.
 
-Our first question was about the functional form of the relationships between age, speed, and accuracy (see SI: Correlations for raw correlations between variables). We began by fitting linear mixed effects models predicting speed and accuracy on each trial across the full dataset with random slopes of child age by study and random intercepts by participant. We compared models that included both long and short accuracy windows, as well as logarithmic and linear effects of age, and logarithmic and linear transformations of RT. The best fitting model of accuracy predicted long window accuracy as a function of the logarithm of age; the best fitting model of speed predicted log RT as a function of log age as well (see SI: Functional Form Model Comparison). Because long window accuracies were more correlated with other variables and showed clearer age gradients, we focus on these in our analyses.
+Our first question was about the functional form of the relationships between age, speed, and accuracy (see SI: Correlations for raw correlations between variables). We began by fitting linear mixed effects models predicting speed and accuracy on each trial across the full dataset with random slopes of child age by study (modeling item and procedural) variation across studies) and random intercepts by participant. We compared models that included both long and short accuracy windows, as well as logarithmic and linear effects of age, and logarithmic and linear transformations of RT. The best fitting model of accuracy predicted long window accuracy as a function of the logarithm of age; the best fitting model of speed predicted log RT as a function of log age as well (see SI: Functional Form Model Comparison). Because long window accuracies were more correlated with other variables and showed clearer age gradients, we focus on these in our analyses.
 
 Figure \ref{fig:devchange} shows these age gradients. Log RT decreased significantly with age, reflecting increasing speed (`r papaja::apa_print(rt_mods_lmer[[2]])$full_result$log_age_s`) and accuracy also increased significantly with age  (`r papaja::apa_print(acc_mods_lmer[[2]])$full_result$log_age_s`). In sum, we see continuing improvements in word recognition across the full age range in our dataset that appear roughly linear in the logarithm of age. These logarithmic relationships follow theoretical expectations that both speed and accuracy should gradually asymptote to mature levels of performance, as seen in skill learning more generally [@anderson1982,@snoddy1926]. 
 
@@ -585,7 +585,7 @@ growth_mod <- lmer(prod ~ poly(age_15,2) *rt_t0 + (age  | subject_id) + (1 | dat
 ```
 
 
-To investigate within-person relationships between LWL and vocabulary, we began by fitting longitudinal growth models to the portion of the data containing multiple LWL sessions for individual children. We first reproduced the analysis reported in @fernald2012, in which between-person differences in longitudinal growth in productive vocabulary were predicted based on between-person differences in speed during the initial session of the study. We fit a mixed effects model predicting growth in vocabulary as a quadratic function of age, RT at study initiation ($t_0$), and their interaction (as well as random effects of age by participant and by dataset). This model revealed a significant effect of $t_0$ RT (`r papaja::apa_print(growth_mod)$full_result$rt_t0`) and an interaction between $t_0$ RT and the quadratic age predictor (`r papaja::apa_print(growth_mod)$full_result$polyage_15_22_rt_t0`). This analysis suggests that children with faster initial RTs show both larger vocabularies and faster vocabulary growth over time, confirming that findings of @fernald2012 were robust across the full set of longitudinal data in our dataset. 
+To investigate within-person relationships between LWL and vocabulary, we began by fitting longitudinal growth models to the portion of the data containing multiple LWL sessions for individual children. We first reproduced the analysis reported in @fernald2012, in which between-person differences in longitudinal growth in productive vocabulary were predicted based on between-person differences in speed during the initial session of the study. We fit a mixed effects model predicting growth in vocabulary as a quadratic function of age, RT at study initiation ($t_0$), and their interaction (as well as random effects of age by participant and by dataset). This model revealed a significant effect of $t_0$ RT (`r papaja::apa_print(growth_mod)$full_result$rt_t0`) and an interaction between $t_0$ RT and the quadratic age predictor (`r papaja::apa_print(growth_mod)$full_result$polyage_15_22_rt_t0`). This analysis suggests that children with faster initial RTs show both larger vocabularies and faster vocabulary growth over time. 
 
 We confirmed this analysis using a non-linear growth model with a logistic shape, which provides a better fit to vocabulary size than the quadratic model (see SI: Non-Linear Growth Model) [@frank2021]. Figure \ref{fig:growth} shows predictions from this model, confirming the differentiation of growth curves for children with higher and lower initial reaction time. 
 
@@ -866,7 +866,7 @@ More broadly, our results here suggest the continued importance of the looking-w
 
 We included information from `r length(unique(d_sub$subject_id))` unique participants across `r length(unique(d_sub$dataset_name))` datasets. Dataset information is given in Table \ref{tab:datasets}. Although experiments in Peekbank include a variety of different experimental manipulations, we analyzed only data from simple word recognition trials; these trials were sometimes the main focus of the original studies and sometimes constituted control conditions for experiments with more complex manipulations. We focus here on English purely for practical reasons -- the Peekbank dataset at present contains limited data from other languages.
 
-We excluded trials entirely if they were missing data on more than 50% of timepoints, and excluded RTs if they were based on fewer than 50% of timepoints in the short analytic window (200 -- 2000 ms). We also removed RTs shorter than 367 ms, as these were unlikely to be generated based on the specific linguistic stimulus. We then excluded participants from the analysis if they contributed fewer than four accuracy measurements or fewer than 2 reaction time measurements. At the participant level, these steps together led to `r round(mean(is.na(d_sub$rt)), 2)`% missingness for RTs and `r round(mean(is.na(d_sub$long_window_accuracy)), 2)`% missingness for long window accuracies.
+We excluded trials entirely if they were missing data on more than 50% of timepoints, and excluded RTs if they were based on fewer than 50% of timepoints in the short analytic window (200 -- 2000 ms). We also removed RTs shorter than 367 ms, as these were unlikely to be generated based on the specific linguistic stimulus. We then excluded participants from the analysis if they contributed fewer than four accuracy measurements or fewer than 2 reaction time measurements. At the participant level, these steps together led to `r round(mean(is.na(d_sub$rt)), 3)*100`% missingness for RTs and `r round(mean(is.na(d_sub$long_window_accuracy)), 3)*100`% missingness for long window accuracies.
 
 ## Analytic methods {.unnumbered}
 
